--- a/styles/_liveStudio.scss
+++ b/styles/_liveStudio.scss
@@ -11,7 +11,7 @@
 }
 #liveStudio .livestudio-sec1{
     padding-top: 2rem;
-    padding-bottom: 150px;
+    // padding-bottom: 150px;
 }
 #liveStudio .showless_btn .active{
     height: auto;
